# space-sim

./: Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
src/: attempt_1.py  main.py  notes.txt  runkut.py  utils.py
src/models/: test_scenario.py
test/: attempt_1_test.py
