[tool.poetry]
name = "space-sim"
version = "0.1.0"
description = ""
authors = ["Simran Jackson <simran.jackson@johnlewis.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
pandas = "^1.1.1"
unittest = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
